tests/pos/18789.scala
sealed trait TypeId:
  case class Foo() extends TypeId

object TypeId {}
