tests/neg/i13815/Shape_1.scala
sealed trait Shape

object Shape:
  case class Circle(r: Int) extends Shape
  case class Square(width: Int) extends Shape